# Photyx

./: .gitignore  .projectile  Cargo.toml  README.md  TAGS  build.ps1  css-audit.md  css-audit.py  env.ps1  package-lock.json  package.json  svelte.config.js  tauri-README.md  vite.config.js
.github/workflows/: release.yml
crates/photyx-xisf/: Cargo.toml  LICENSE-APACHE  LICENSE-MIT
crates/photyx-xisf/src/: compress.rs  error.rs  lib.rs  reader.rs  types.rs  writer.rs
crates/photyx-xisf/tests/: reader_tests.rs
crates/photyx-xisf/tests/data/: .gitignore
design/: DEVNOTES.md  Metric-Correlation-Analysis-NGC6910.md  Metric-Correlation.md  Photyx_Memory_Audit.md  SelectFiles_Implementation_Plan.md  To Do List.md  convert_all_css.sh  development_notes.md  handoff.md  initial_requirements_v0.0.md  live-stacking.md  metric_algorithm_update_v2.md  photyx_development.md  photyx_persistence_inventory.md  photyx_reference.md  photyx_spec.md  photyx_spec_contour_heatmap.md  photyx_spec_v11.md  photyx_ui_patterns.md  project-onboarding.md  stacking_development.md
design/Archive/: Metric-Correlation.md  Metric_Updates.md  convert_font_sizes.py  photyx_persistence_inventory.md  photyx_spec.md
docs/: Photyx-build-release.md  Photyx_pcode_guide.md  Stacking-Audit-Findings.md  UX_Best_Practices.md  back-front-communications.md  photyx_next_release_analysis.md  photyx_next_release_analysis_20260710.md  photyx_technical_reference.md  project-onboarding.md  stacking_development.md  streaming-frames-redesign.md  thresholding-analysis-fable5.md
src/: index.html
src-svelte/: app.html
src-svelte/lib/: clientCommands.ts  commands.ts  db.ts  pcode.ts  pcodeCommands.ts  pcodeHelp.ts  pcode_commands.json
src-svelte/lib/components/: AboutModal.svelte  AnalysisGraph.svelte  AnalysisResults.svelte  AnalyzeFramesProfileDialog.svelte  Console.svelte  Dropdown.svelte  FeaturePreferencesDialog.svelte  HelpModal.svelte  IconSidebar.svelte  InfoPanel.svelte  KeywordModal.svelte  LogViewer.svelte  MenuBar.svelte  PreferencesDialog.svelte  QuickLaunch.svelte  StackResult.svelte  StackingWorkspace.svelte  StatusBar.svelte  ThresholdProfilesDialog.svelte  Toolbar.svelte  Viewer.svelte  helpModal.svelte
src-svelte/lib/components/panels/: FileBrowser.svelte  KeywordEditor.svelte  MacroEditor.svelte  MacroLibrary.svelte  PluginManager.svelte
src-svelte/lib/settings/: constants.ts
src-svelte/lib/stores/: #ui.ts#  analysisToggles.ts  consoleHistory.ts  featureFlags.ts  notifications.ts  progress.ts  quickLaunch.ts  session.ts  settings.ts  thresholdProfiles.ts  ui.ts
src-svelte/lib/types/: svelte-elements.ts
src-svelte/routes/: +page.svelte
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: constants.rs  lib.rs  logging.rs  main.rs  render.rs  utils.rs
src-tauri/src/analysis/: background.rs  debayer.rs  eccentricity.rs  fft_align.rs  fwhm.rs  metrics.rs  mod.rs  moffat.rs  profiles.rs  session_stats.rs  stack_metrics.rs  star_align.rs  stars.rs
src-tauri/src/commands/: analysis.rs  backup.rs  display.rs  feature_flags.rs  logging.rs  macros.rs  mod.rs  preferences.rs  session.rs  threshold_profiles.rs
src-tauri/src/context/: mod.rs
src-tauri/src/db/: migrations.rs  mod.rs  schema.rs
src-tauri/src/pcode/: expr.rs  mod.rs  run_macro.rs  tokenizer.rs
src-tauri/src/plugin/: mod.rs  registry.rs  set_frame.rs
src-tauri/src/plugins/: add_files.rs  analyze_frames.rs  atomic_write.rs  auto_crop.rs  auto_stretch.rs  background_extract.rs  background_median.rs  cache_frames.rs  clear_session.rs  clear_stack.rs  commit_analysis.rs  commit_stretch.rs  compute_eccentricity.rs  compute_fwhm.rs  contour_heatmap.rs  debayer_image.rs  export_analysis_report.rs  fake_progress.rs  filter_by_keyword.rs  get_histogram.rs  highlight_clipping.rs  image_reader.rs  keywords.rs  list_keywords.rs  load_common.rs  mod.rs  pixel_chunking.rs  read_all_files.rs  read_fits.rs  read_images.rs  read_tiff.rs  read_xisf.rs  reject_current_frame.rs  run_macro.rs  scripting.rs  select_directory.rs  set_frame.rs  stack_frames.rs  star_count.rs  write_current_files.rs  (+4 more)
src-tauri/src/settings/: defaults.rs  mod.rs
src/css/: layout.css  statusbar.css  toolbar.css  viewer.css
src/js/: app.js  console.js  pcode.js  starfield.js
static/css/: analysisgraph.css  analysisresults.css  analyzeFramesProfileDialog.css  app-shell.css  console.css  dropdown.css  helpmodal.css  infopanel.css  layout.css  logviewer.css  macroeditor.css  modal.css  preferences.css  sidebar.css  stackingworkspace.css  stackresult.css  statusbar.css  thresholdprofiles.css  toolbar.css  viewer.css
static/themes/: dark.css  light.css  matrix.css
