[package]
name = "photyx"
version = "0.1.0"
description = "Photyx — High-performance astrophotography platform"
authors = ["Stan"]
edition = "2021"

[lib]
name = "photyx_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
photyx-xisf = { path = "../crates/photyx-xisf" }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
fitsio = "0.21"
tiff = "0.9"
image = "0.25"
base64 = "0.22"
tauri-plugin-dialog = "2.7.0"
rayon = "1.12.0"
num_cpus = "1.17.0"
fitsio-sys = "0.5.7"
