[package]
name = "photyx"
version = "0.1.0"
description = "Photyx — High-performance astrophotography platform"
authors = ["Stan"]
edition = "2021"

[lib]
name = "photyx_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
chrono = "0.4"
dirs-next = "2"
fitsio = "0.21"
fitsio-sys = "0.5.7"
flate2 = "1"
image = "0.25"
num_cpus = "1.17.0"
once_cell = "1"
photyx-xisf = { path = "../crates/photyx-xisf" }
rayon = "1.12.0"
rusqlite = { version = "0.32", features = ["backup", "bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2.7.0"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
tiff = "0.9"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
