[package]
name = "photyx"
version = "0.9.0-rc.1"
description = "Photyx — High-performance astrophotography review and filtering program"
authors = ["Sparsile"]
edition = "2021"

[lib]
name = "photyx_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
chrono = "0.4"
dirs-next = "2"
fitsio = "0.21"
glob = "0.3"
zip = { version = "2", default-features = false, features = ["aes-crypto", "deflate", "deflate64", "lzma", "time", "xz", "zstd"] }
image = "0.25"
num_cpus = "1.17.0"
once_cell = "1"
photyx-xisf = { path = "../crates/photyx-xisf" }
rayon = "1.12.0"
rustfft = "6"
rusqlite = { version = "0.32", features = ["backup", "bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2.7.0"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
tiff = "0.9"
tokio = { version = "1", features = ["rt"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

# cfitsio: statically linked from source on Linux/macOS (fitsio-src +
# src-cmake) — eliminates the runtime-dependency SONAME mismatch across
# Ubuntu releases and Homebrew's arch-native builds. Windows stays on
# dynamic linking via vcpkg + pkg-config (pkgconfiglite) — fitsio-sys's
# CMake invocation hardcodes -DUSE_PTHREADS=ON but never supplies the
# CMAKE_INCLUDE_PATH/CMAKE_LIBRARY_PATH pointing at a pthreads-win32
# install that CFITSIO's own Windows build docs (README.win) say is
# required, so the from-source build fails on MSVC. Confirmed proven
# working on both sides tonight, just not simultaneously.
[target.'cfg(not(target_os = "windows"))'.dependencies]
fitsio-sys = { version = "0.5.7", features = ["fitsio-src", "src-cmake"] }

[target.'cfg(target_os = "windows")'.dependencies]
fitsio-sys = "0.5.7"
